kubernetes/nginxingress/chatgpt-clone-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-chatgpt-clone
  namespace: chatgpt-clone
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/enable-cors: "true"
    # nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   more_set_headers "X-Robots-Tag: noindex, nofollow";
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - chatgpt.datafortress.cloud
    secretName: tls-secret
  rules:
  - host: chatgpt.datafortress.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chatgpt-clone
            port:
              number: 1338
